jobs/job_60783810/uncert/errors/benchmark_609/solver_2.txt
INFO: Pointer analysis took 0 sec 193 ms
input.cc:575:34: error: use of undeclared identifier 'node1_index'
void (*nodes[5])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                 ^
input.cc:575:52: error: use of undeclared identifier 'node2_index'
void (*nodes[5])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                   ^
input.cc:575:70: error: use of undeclared identifier 'node3_index'
void (*nodes[5])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                                     ^
input.cc:575:88: error: use of undeclared identifier 'node4_index'
void (*nodes[5])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                                                       ^
input.cc:576:9: error: use of undeclared identifier 'node5_index'
        node5_index};
        ^
5 errors generated.
iCbJn_Ptr2Arr.c:575:34: error: use of undeclared identifier 'node1_index'
void (*nodes[5])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                 ^
iCbJn_Ptr2Arr.c:575:52: error: use of undeclared identifier 'node2_index'
void (*nodes[5])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                   ^
iCbJn_Ptr2Arr.c:575:70: error: use of undeclared identifier 'node3_index'
void (*nodes[5])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                                     ^
iCbJn_Ptr2Arr.c:575:88: error: use of undeclared identifier 'node4_index'
void (*nodes[5])(void)  = {      node1_index,      node2_index,      node3_index,      node4_index, 
                                                                                       ^
iCbJn_Ptr2Arr.c:576:9: error: use of undeclared identifier 'node5_index'
        node5_index};
        ^
iCbJn_Ptr2Arr.c:2913:5: warning: unused label 'ERROR' [-Wunused-label]
    ERROR: __VERIFIER_error();
    ^~~~~~~
1 warning and 5 errors generated.
